--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
     <div>
         <div style="position: relative;">
-            <img src="好.png" style="width:250px;height:150px;"/>
-            <img src="了.png" style="width:250px;height:150px;"/>
-            <img src="啦.png" style="width:250px;height:150px;"/>
+            <img src="1.png" style="width:250px;height:150px;"/>
+            <img src="2.png" style="width:250px;height:150px;"/>
+            <img src="3.png" style="width:250px;height:150px;"/>
         </div>
         <div style="position: relative;">
             <h1>Introduction</h1>
