--- a/index.html
+++ b/index.html
@@ -60,5 +60,8 @@
             </p>
         </div>
     </div>
+    <a href="mailto:someone@example.com">Send email</a>
+    <a href="tel:123-456-7890">123-456-7890</a>
+    <a href="#x">go to History & Philosophy</a>
 </body>
 </html>
