--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         p{
             color: blue;
         }
+        ins{
+          background-color: pink;
+        }
+        del{
+          background-color: pink;
+        }
     </style>
 </head>
 <body>
@@ -36,7 +42,7 @@
                 Attractions such as Taipei 101, the Palace Museum, and the Chiang Kai-shek Memorial Hall are in close
                 proximity to Taipei Tech
             </p>
-            <h2>History & Philosophy</h2>
+            <h2 id="x">History & Philosophy</h2>
             <p>
                 Established in 1912, Taipei Tech is among one of the oldest universities in Taiwan. It was <super>1<sup>st</sup></super> established during
                 the Japanese Colonial Period as the Auxiliary Industrial Institute of the Education Affairs Office of the Civil
@@ -58,10 +64,15 @@
                 magazine. Taipei Tech is also renowned as top World Green University. In UI Green Metrics University Rankings,
                 Taipei Tech is ranked as the 1st Green University in Taiwan and the 6th in world in the city center catergory
             </p>
+            <h2>Love</h2>
+            <p>
+                <ins>Yun</ins> is <del>not</del> my wife.
+            </p>
+            <h2>Other info</h2>
+            <a href="mailto:someone@example.com">Send email</a><br>
+            <a href="tel:123-456-7890">123-456-7890</a><br>
+            <a href="#x">go to History & Philosophy</a>
         </div>
     </div>
-    <a href="mailto:someone@example.com">Send email</a>
-    <a href="tel:123-456-7890">123-456-7890</a>
-    <a href="#x">go to History & Philosophy</a>
 </body>
 </html>
