--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Taipei TECH</title>
     <style type="text/css">
-        div{
-            position: absolute;
-            width: 80%;
-            top: 10%;
-            left: 10%;
+        div.content{
+            overflow: auto;
+            border: 3px;
+            resize: both;
+            width: 70%;
+        }
+        .blue{
+          float: right;
+          width: 50%;
+
+          background-color: blue;
+        }
+        .green{
+          float: right;
+          width: 50%;
+
+          background-color: green;
         }
         super{
             font-weight: bold;
