--- a/LAB3/lab3.html
+++ b/LAB3/lab3.html
@@ -36,7 +36,7 @@
         }
         #nav{
             margin: 50px auto;
-            background: #ff8000;
+            background: #FFDC35;
         }
         #nav a:hover{
           background-color: red;
@@ -44,7 +44,7 @@
     </style>
 </head>
 
-<body style="background-color:rgb(200, 150, 100)"style="display:flex;">
+<body style="background-color:#FFF8D7"style="display:flex;">
     <div>
       <nav>
         <ul id=nav>
@@ -59,7 +59,7 @@
     <!-- Don't forget to submit HTML file to your GitHub repository -->
     <!-- Write your code here -->
     <div class="photo">
-      <div style="background-color:#D94600">
+      <div style="background-color:#FFE6D9">
         <img src="a.jpeg"style="width:300px;height:300px;border-radius:50%"title="hi"/>
         <br>
         <h2><a href="#x">name</a></h2>
