--- a/LAB3/lab3.html
+++ b/LAB3/lab3.html
@@ -22,11 +22,11 @@
         }
         .photo{
             float:left;
-            width:20%
+            width:18%
         }
         .text{
             float:right;
-            width:80%
+            width:75%
         }
         #nav li{
             display: inline;
@@ -48,18 +48,18 @@
     <div>
       <nav>
         <ul id=nav>
-            <li style='width:25%'><a href="https://www.google.com.tw/?hl=zh_TW">Google</a></li>
-            <li style='width:25%'><a href="https://www.youtube.com/">Youtube</a></li>
-            <li style='width:25%'><a href="https://www.ntut.edu.tw/">Taipei Tech</a></li>
-            <li style='width:25%'><a href="https://www.netflix.com/tw/">Netflix</a></li>
-            <li style='width:25%'><a href="https://www.instagram.com/">Instagram</a></li>
+            <li style='width:25%'><a href="certification.html">證照檢定</a></li>
+            <li style='width:25%'><a href="interest.html">興趣活動</a></li>
+            <li style='width:25%'><a href="cadre.html">幹部經歷</a></li>
+            <li style='width:25%'><a href="community.html">社群軟體</a></li>
+            <li style='width:25%'><a href="">Instagram</a></li>
         </ul>
       </nav>
     </div>
     <!-- Don't forget to submit HTML file to your GitHub repository -->
     <!-- Write your code here -->
     <div class="photo">
-      <div style="background-color:#FFE6D9">
+      <div style="background-color:#ACD6FF">
         <img src="a.jpeg"style="width:300px;height:300px;border-radius:50%"title="hi"/>
         <br>
         <h2><a href="#x">name</a></h2>
@@ -70,7 +70,7 @@
       </div>
     </div>
     <div class="text">
-      <div style="background-color:#FFD306">
+      <div style="background-color:#D8D8EB">
         <h1 style="color:red;">Biography</h1>
         <h2 style="background-color:rgb(50, 99, 200);"id="x">Name</h2>
         <p>陳思群</p>
