--- a/LAB3/lab3.html
+++ b/LAB3/lab3.html
@@ -48,11 +48,11 @@
     <div>
       <nav>
         <ul id=nav>
-            <li style='width:25%'><a href="certification.html">證照檢定</a></li>
+	    <li style='width:25%'><a href="personality.html">個人特質</a></li>
             <li style='width:25%'><a href="interest.html">興趣活動</a></li>
             <li style='width:25%'><a href="cadre.html">幹部經歷</a></li>
+            <li style='width:25%'><a href="certification.html">證照檢定</a></li>
             <li style='width:25%'><a href="community.html">社群軟體</a></li>
-            <li style='width:25%'><a href="">Instagram</a></li>
         </ul>
       </nav>
     </div>
