--- a/LAB3/lab3.html
+++ b/LAB3/lab3.html
@@ -22,7 +22,7 @@
         }
         .photo{
             float:left;
-            width:18%
+            width:20%
         }
         .text{
             float:right;
@@ -32,7 +32,7 @@
             display: inline;
             line-height: 40px;
             color: #000;
-            padding: 100px 100px;
+            padding: 80px 80px;
         }
         #nav{
             margin: 50px auto;
@@ -48,11 +48,12 @@
     <div>
       <nav>
         <ul id=nav>
-	    <li style='width:25%'><a href="personality.html">個人特質</a></li>
-            <li style='width:25%'><a href="interest.html">興趣活動</a></li>
-            <li style='width:25%'><a href="cadre.html">幹部經歷</a></li>
-            <li style='width:25%'><a href="certification.html">證照檢定</a></li>
-            <li style='width:25%'><a href="community.html">社群軟體</a></li>
+          <li style='width:25%'><a href="LAB3.html">首頁</a></li>
+	        <li style='width:25%'><a href="personality.html">個人特質</a></li>
+          <li style='width:25%'><a href="interest.html">興趣活動</a></li>
+          <li style='width:25%'><a href="cadre.html">幹部經歷</a></li>
+          <li style='width:25%'><a href="certification.html">證照檢定</a></li>
+          <li style='width:25%'><a href="community.html">社群軟體</a></li>
         </ul>
       </nav>
     </div>
